--- a/src/main/resources/templates/pages/confirmation-private.html
+++ b/src/main/resources/templates/pages/confirmation-private.html
@@ -238,7 +238,7 @@
                             <div class="col-md-2 form-group">
                                 <label for="username_private">Gebruikersnaam</label>
                                 <input class="form-control" id="username_private" maxlength="16"
-                                       minlength="4" name="username_private" pattern="^(?=[a-zA-Z0-9_]{4,}$)"
+                                       minlength="4" name="username_private" pattern="^[A-Za-z0-9_]{4,16}$"
                                        required
                                        th:field="*{userName}" type="text"/>
                                 <div class="invalid-feedback"></div>
