--- a/src/main/resources/templates/pages/employee-dashboard-private.html
+++ b/src/main/resources/templates/pages/employee-dashboard-private.html
@@ -22,7 +22,7 @@
     </table>
     <table class="table table-bordered m-15">
         <thead class="thead-light">
-        <tr th:each="account : ${accounts}">
+        <tr th:each="account : ${naturalAccounts}">
             <td th:text="${account.iban}"></td>
             <td th:text="${account.balance}"></td>
             <td th:text="${account.getAccountHolderNames()}"></td>
