--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -5,31 +5,54 @@
     <title>Rekening openen</title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+    <script>
+        function random(){
+            let country_code = "NL"
+            let final_IBAN = "DROVN";
+            let string_length = 11;
+            let characters = "0123456789";
+            for( i = 0; i < string_length; i++){
+                final_IBAN += characters.charAt(Math.floor(Math.random() * characters.length));
+            }
+            document.ibanForm.ibanGenerator.value = country_code + final_IBAN;
+        }
+
+   /*     function ibanClicked() {
+            let button = document.querySelector("#ibanButton");
+            button.addEventListener("click", random())
+            button.removeEventListener("click", removeIbanButton);
+            button.innerHTML = "you clicked";
+            alert("knop is geklikt");
+        }
+
+        window.addEventListener("load", function (){
+            document.querySelector("#ibanButton").addEventListener("click",removeIbanButton );
+        })*/
+
+    </script>
 </head>
 <body>
-
-
-
-
 <div class="container">
     <h1> Bankrekening openen</h1>
     <hr>
     <h2> Fijn dat u een rekening bij ons wilt openen.</h2>
     <h3> U kunt direct uw nieuwe rekening bevestigen.</h3>
 
-    <form action="/saveaccount" method="post">
-        <!--input type="hidden" th:field="${id}"/!-->
+    <form>
         <div class="form-group">
             <label for="name">Rekeninghouder</label>
             <input type="text" th:field="${customer.initials}" id="name" name="name" placeholder="Rekeninghouder"
-                   class="form-control"/>
+                   class="form-control" readonly/>
         </div>
+    </form>
+    <form action="/saveaccount" method="post" name="ibanForm">
         <div class="form-group">
-            <label for="iban">Uw nieuwe rekening nummer:</label>
-            <p id="ibanGenerator"></p>
-            <input type="text" id="iban" name="iban" placeholder="IBAN"
-                   class="form-control"/>
+            <input type="button" id="ibanButton" value="Uw nieuwe rekeningnummer" onclick="random();">
+            <label for="ibanGenerator"></label>
+            <input type="text" th:field="*{account.iban}" id="ibanGenerator" value="" placeholder="IBAN"/>
         </div>
+
         <div class="form-group">
             <label for="balance">Uw huidige saldo:</label>
             <input type="text" th:field="*{account.balance}" id="balance" class="form-control" placeholder="Saldo"
@@ -43,23 +66,8 @@
                 <div class="invalid-feedback">Graag aanvinken als u door zou willen gaan</div>
             </label>
         </div>
-        <button type="submit" class="btn btn-primary">Bevestig</button>
+        <button type="submit" id="button"  class="btn btn-primary">Bevestig</button>
     </form>
 </div>
 </body>
-<script>
-document.getElementById("ibanGenerator").innerHTML =random(9);
-
-   function random(length){
-    var random_string = "DROVN";
-    var characters = "0123456789";
-    for(var i, i=0; i < length; i++){
-    random_string += characters.charAt(Math.floor(Math.random() * characters.length));
-    }
-    return random_string;
-    }
-
-
-</script>
-
 </html>
