html opgeleukt medewerker dashboard

--- a/src/main/resources/templates/pages/employee-dashboard-legal.html
+++ b/src/main/resources/templates/pages/employee-dashboard-legal.html
@@ -2,49 +2,67 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Employee Dashboard Legal</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 
-<h1>Hoi, welkom op het Medewerker Dashboard!</h1>
+    <h1>Hoi, welkom Hoofd MKB!</h1>
+    <br>
 
-<h2>Hier komt de naam van de medewerker</h2>
-<h2>En de functie</h2>
+    <div class="container my-2">
+        <h3>10 klanten met hoogste saldo</h3>
+        <table class="table table-striped table-responsive-md">
+            <thead>
+            <tr>
+                <th>Klant</th>
+                <th>Iban</th>
+                <th>Saldo</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="account : ${legalAccounts}">
+                <td th:text="${account.getAccountHolderNames()}"></td>
+                <td th:text="${account.iban}"></td>
+                <td th:text="${account.balance}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="container my-2">
+        <h3>Gemiddelde saldo per segment</h3>
+        <table class="table table-striped table-responsive-md">
+            <thead>
+            <tr>
+                <th>Segment</th>
+                <th>Gemiddeld saldo</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="b : ${balancePerSector}">
+                <td th:text="${b.sector}"></td>
+                <td th:text="${b.balance}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="container my-2">
+        <h3>10 meest actieve klanten</h3>
+        <table class="table table-striped table-responsive-md">
+            <thead>
+            <tr>
+                <th>Klant</th>
+                <th>Aantal transacties</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="m : ${mostActiveClients}">
+                <td th:text="${m.companyName}"></td>
+                <td th:text="${m.numberOfTransactions}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 
-<table class="table table-bordered m-15">
-    <thead class="thead-light">
-    <tr>
-        <td th:text="${employee.firstName}"></td>
-        <td th:text="${employee.employeeRole}"></td>
-    </tr>
-    </thead>
-</table>
-<table class="table table-bordered m-15">
-    <thead class="thead-light">
-    <tr th:each="account : ${legalAccounts}">
-        <td th:text="${account.iban}"></td>
-        <td th:text="${account.balance}"></td>
-        <td th:text="${account.getAccountHolderNames()}"></td>
-    </tr>
-    </thead>
-</table>
-<table class="table table-bordered m-15">
-    <thead class="thead-light">
-    <tr th:each="b : ${balancePerSector}">
-        <td th:text="${b.sector}"></td>
-        <td th:text="${b.balance}"></td>
-    </tr>
-    </thead>
-</table>
-</table>
-<table class="table table-bordered m-15">
-    <thead class="thead-light">
-    <tr th:each="m : ${mostActiveClients}">
-        <td th:text="${m.companyName}"></td>
-        <td th:text="${m.numberOfTransactions}"></td>
-    </tr>
-    </thead>
-</table>
 </body>
 </html>
