--- a/src/main/resources/templates/pages/employee-dashboard-private.html
+++ b/src/main/resources/templates/pages/employee-dashboard-private.html
@@ -2,32 +2,33 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Employee Dashboard Private</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 
-<h1>Hoi, welkom op het Medewerker Dashboard!</h1>
+<h1>Hoi, welkom Hoofd Particulier!</h1>
+<br>
 
-    <h2>Hier komt de naam van de medewerker</h2>
-    <h2>En de functie</h2>
-
-    <table class="table table-bordered m-15">
-        <thead class="thead-light">
+<div class="container my-2">
+    <h3>10 klanten met hoogste saldo</h3>
+    <table class="table table-striped table-responsive-md">
+        <thead>
         <tr>
-            <td th:text="${employee.firstName}"></td>
-            <td th:text="${employee.employeeRole}"></td>
+            <th>Klant</th>
+            <th>Iban</th>
+            <th>Saldo</th>
         </tr>
         </thead>
-    </table>
-    <table class="table table-bordered m-15">
-        <thead class="thead-light">
+        <tbody>
         <tr th:each="account : ${naturalAccounts}">
+            <td th:text="${account.getAccountHolderNames()}"></td>
             <td th:text="${account.iban}"></td>
             <td th:text="${account.balance}"></td>
-            <td th:text="${account.getAccountHolderNames()}"></td>
         </tr>
-        </thead>
+        </tbody>
     </table>
+</div>
+
 </body>
 </html>
