--- a/src/main/resources/templates/pages/open-account.html
+++ b/src/main/resources/templates/pages/open-account.html
@@ -7,15 +7,17 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
     <script>
+
         function random(){
             let country_code = "NL"
-            let final_IBAN = "DROVN";
+            let bank_code= "DROVN";
+            let final_IBAN = [];
             let string_length = 11;
             let characters = "0123456789";
             for( i = 0; i < string_length; i++){
                 final_IBAN += characters.charAt(Math.floor(Math.random() * characters.length));
             }
-            document.ibanForm.ibanGenerator.value = country_code + final_IBAN;
+            document.ibanForm.ibanGenerator.value = country_code + bank_code + final_IBAN;
         }
 
    /*     function ibanClicked() {
@@ -42,17 +44,17 @@
     <form>
         <div class="form-group">
             <label for="name">Rekeninghouder</label>
-            <input type="text" th:field="${customer.initials}" id="name" name="name" placeholder="Rekeninghouder"
+            <input type="text" th:field="${customer.firstName}" id="name" name="name" placeholder="Rekeninghouder"
                    class="form-control" readonly/>
         </div>
     </form>
     <form action="/saveaccount" method="post" name="ibanForm">
+        <input type="text" th:field="*{customer.customerID}"  value="customer.customerID" hidden/>
         <div class="form-group">
-            <input type="button" id="ibanButton" value="Uw nieuwe rekeningnummer" onclick="random();">
             <label for="ibanGenerator"></label>
             <input type="text" th:field="*{account.iban}" id="ibanGenerator" value="" placeholder="IBAN"/>
+            <input type="button" id="ibanButton" value="Uw nieuwe rekeningnummer" onclick="random();">
         </div>
-
         <div class="form-group">
             <label for="balance">Uw huidige saldo:</label>
             <input type="text" th:field="*{account.balance}" id="balance" class="form-control" placeholder="Saldo"
