account_details globaal klaar

--- a/src/main/resources/scss/styles.scss
+++ b/src/main/resources/scss/styles.scss
@@ -37,13 +37,18 @@ $font-family-sans-serif: 'PT Sans', -apple-system, BlinkMacSystemFont, "Segoe UI
 @import "../../../../node_modules/bootstrap/scss/bootstrap";
 
 .text-blue {
-  color: $blue;
+  color: #312783;
 }
 
 .text-orange {
-  color: $orange;
+  color: #F39200;
 }
 
 .border-w-2 {
   border-width: 2px !important;
+}
+
+.table-striped>tbody>tr:nth-child(odd)>td,
+.table-striped>tbody>tr:nth-child(odd)>th {
+  background-color: hsla(35,100,95,0.2);
 }
