--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,9 +5,9 @@
     <div class="container pl-0 pr-0">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">
-                <img src="https://getbootstrap.com//docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30"
+                <img src="/images/DROVN2.svg" width="150" height="150"
                      class="d-inline-block align-top" alt="">
-                Bootstrap
+
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
