frontend code toegevoegd employee dashboard2

--- a/src/main/resources/templates/pages/employee-dashboard-legal.html
+++ b/src/main/resources/templates/pages/employee-dashboard-legal.html
@@ -30,7 +30,8 @@
         right: 15px;
         width: 15px;
         height: 15px;
-        background-color: red;
+        background: red url("././static/images/close-512.png") center center no-repeat;
+        background-size: 15px;
     }
     #popup{
         z-index: 10;
